# EuroCV

./: -  .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETED_IMPROVEMENTS.md  CONTRIBUTING.md  CONVERSION_ANALYSIS.md  Dockerfile  Dockerfile.dev  EXTRACTION_IMPROVEMENTS.md  FINAL_TEST_RESULTS.md  IMPROVEMENT_RESULTS.md  LICENSE  MANIFEST.in  MYPY_ENFORCEMENT.md  Makefile  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  SCHEMA_COMPLIANCE.md  TODO.md  codecov.yml  docker-compose.yml  profile_europass_final.json  profile_europass_final2.json  profile_europass_final3.json  profile_europass_original_test.json  profile_europass_refined.json  profile_europass_v2.json  profile_europass_v3.json  profile_europass_v4.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
.github/: branch-protection-rules.md
.github/workflows/: docker-build.yml  publish.yml  test.yml
docs/: EUROPASS_SCHEMA_V3.4.md  EXTRACTOR_ARCHITECTURE.md  USAGE.md
examples/: api_client.py  basic_usage.py  europass_example.json
scripts/: check.sh  release.sh  setup-dev.sh
src/eurocv/: __init__.py
src/eurocv/api/: __init__.py  main.py
src/eurocv/cli/: main.py
src/eurocv/core/: __init__.py  converter.py  europass_schema.py  models.py
src/eurocv/core/extract/: __init__.py  base_extractor.py  docx_extractor.py  generic_pdf_extractor.py  linkedin_pdf_extractor.py  pdf_extractor.py  registry.py
src/eurocv/core/map/: __init__.py  europass_mapper.py
src/eurocv/core/validate/: __init__.py  schema_validator.py
src/eurocv/schemas/: README.md
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_converter.py  test_europass_mapper.py  test_extractor_registry.py  test_extractors.py  test_generic_pdf_extractor.py  test_integration.py  test_models.py  test_real_world_cvs.py  test_schema.py  test_validator.py
